--- a/CustomerManagerWebAPI/appsettings.json
+++ b/CustomerManagerWebAPI/appsettings.json
@@ -12,7 +12,7 @@
   },
   "Jwt": {
     "Key": "ThisIsASecretKeyAndShouldBeStoredSafely",
-    "Issuer": "yourdomain.com",
-    "Audience": "yourdomain.com"
+    "Issuer": "AlperenK",
+    "Audience": "Api's User"
   }
 }
