--- a/CustomerManagerWebAPI/appsettings.json
+++ b/CustomerManagerWebAPI/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "CustomerApiBaseUrl": "https://localhost:44326/api/customer",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CustomerManagerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
